# tdl

./: EXTRACT_RESULTS.py  README.md  RUN_TABLE_EXPERIMENTS.sh  generate_figure4.py  pyproject.toml
configs/: baseline_no_attack.yaml  experiments.yaml  faker_attack_comparison.yaml  faker_vs_spp.yaml  la_vs_krum.yaml  la_vs_spp.yaml  mb_vs_norm_clipping.yaml
configs/table/: baseline_faker.yaml  baseline_la.yaml  baseline_mb.yaml  baseline_none.yaml  fltrust_faker.yaml  fltrust_la.yaml  fltrust_mb.yaml  fltrust_none.yaml  krum_faker.yaml  krum_la.yaml  krum_mb.yaml  krum_none.yaml  normclip_faker.yaml  normclip_la.yaml  normclip_mb.yaml  normclip_none.yaml  spp_faker.yaml  spp_la.yaml  spp_mb.yaml  spp_none.yaml
configs/table_1/: baseline_faker.yaml  baseline_la.yaml  baseline_mb.yaml  baseline_none.yaml  fltrust_faker.yaml  fltrust_la.yaml  fltrust_mb.yaml  fltrust_none.yaml  krum_faker.yaml  krum_la.yaml  krum_mb.yaml  krum_none.yaml  normclip_faker.yaml  normclip_la.yaml  normclip_mb.yaml  normclip_none.yaml  spp_faker.yaml  spp_la.yaml  spp_mb.yaml  spp_none.yaml
data/: pull-data.py
figure4_result/: figure4_mnist_20260121_105207.json
logs/baseline_faker_20260115_185627/: attack_logs.json  client_logs.json  config.json  metrics.json  round_logs.json  summary.json
logs/baseline_faker_20260121_115819/: attack_logs.json  client_logs.json  config.json  metrics.json  round_logs.json  summary.json
logs/baseline_fedavg_20251209_140428/: client_logs.json  metrics.json  round_logs.json  summary.json
src/: experiments.py  pyproject.toml
src/attacks/: __init__.py  (+4 more)
(+198 files in other folders)
