[project]
name = "tdl-implementation"
version = "0.1.0"
description = ""
authors = [
    {name = "azzabaatout",email = "azzabaatout1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
